# glissando

./: pyproject.toml
src/glissando/: __main__.py  cli.py
src/glissando/embed/: __init__.py  generator.py
src/glissando/getter/: __init__.py  choice.py  filetype.py  message.py
src/glissando/getter/adapters/: __init__.py  base.py  standart.py  telegram.py
